# soar-app-linter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
soar_app_linter/: __init__.py  __main__.py  app_validation.py  cli.py  dependency_utils.py  pylint_runner.py  pylintrc.app
soar_app_linter/plugins/: __init__.py  avoid_313_random_deprecations_on_all.py  avoid_313_removals_on_39.py  avoid_chained_classmethod_on_313.py  avoid_deprecation_base.py  avoid_filesystem_access.py  avoid_global_playbook_apis.py  avoid_global_variables.py  avoid_infinite_loops.py  avoid_libraries.py  avoid_lxml_library.py  avoid_shell_access.py  avoid_sleeping.py  banned_functions.py
tests/: conftest.py  test_app_json_validation.py  test_cli.py
tests/data/bad_import/: __init__.py  bad.py
tests/data/custom_plugin/: trigger.py
tests/data/error_suppress/: suppress.py
tests/data/good_app/: good.py
tests/data/import_test/: main.py  utils.py
